# OpenPaw

./: .farmwork.json  .gitignore  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  justfile  package-lock.json  package.json  playwright.config.ts
.beads/: interactions.jsonl  metadata.json
.claude/agents/: brownfield-agent.md  code-cleaner.md  code-quality.md  fullstack-agent.md  go-handler-agent.md  idea-gardener.md  migration-agent.md  onboarding-agent.md  page-builder.md  prompt-engineer.md  researcher.md  strategy-agent.md  the-farmer.md  theme-agent.md  user-guide-agent.md  websocket-agent.md
.claude/commands/: push.md
.github/workflows/: ci.yml  desktop.yml  npm-publish.yml  release.yml
_AUDIT/: ACCESSIBILITY.md  CODE_QUALITY.md  COMPOST.md  FARMHOUSE.md  GARDEN.md  KNIP.md  PERFORMANCE.md  SECURITY.md  TESTS.md
_OFFICE/: BROWNFIELD.md  GREENFIELD.md  ONBOARDING.md  USER_GUIDE.md
_PLANS/: PIXELLAB_COMPANION.md  SUBSCRIPTION_CLI_PROVIDERS.md  TOOL_LIBRARY_CATALOG.md  tool-library-expansion.md
_RESEARCH/: GEMINI_CLI.md  OPENAI_CODEX_CLI.md
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
scripts/: bump-version.sh  install.sh
tests/: agents-crud.spec.ts  api-extended.spec.ts  api.spec.ts  auth.setup.ts  auth.spec.ts  chat.spec.ts  context.spec.ts  crud.spec.ts  helpers.ts  library-pages.spec.ts  mobile.spec.ts  navigation.spec.ts  pages.spec.ts  settings-extended.spec.ts
web/: embed.go
(+654 files in other folders)
